[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sssp"
authors = [
  { name = "Duncan Sommerville", email = "duncan.sommerville@gmail.com" },
]
description = "Python implementation of novel single-source shortest-path algorithm"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/dpsommer/shortest-path"
Issues = "https://github.com/dpsommer/shortest-path/issues"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -p no:warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "sssp/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["sssp"]

[tool.hatch.build.targets.sdist]
include = ["sssp/*.py", "/tests"]
exclude = ["/.trunk"]

[tool.bandit.assert_used]
skips = ["**/*_test.py", "**/test_*.py"]
